--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,7 +6,9 @@
     <title>Untitled</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/site.css">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
   </head>
   <body>
     <div id="app-container">hi</div>
