[Batch] UX, Features
- Feat: active-word indicator.
- Feat: Toast functionality.
- Refactor: smaller viewport styling
- Fix: styles: container comp + article list.
- Add: empty state component. Refactor nav component
- Fix: navigate to articles on create.
- Clean: remove demo article.
- Start: add "re-pressed" and hook up right arrow.
- Add: Hook up arrow navigation

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-    <div id="app-container">hi</div>
+    <div id="app-container"></div>
     <script src="js/renderer.js"></script>
   </body>
 </html>
