--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="css/custom.css">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   </head>
