--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Untitled</title>
+    <title>Trunk</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/site.css">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
   </head>
   <body>
     <div id="app-container"></div>
